# speech-fastapi-service

./: .env.example  .gitignore  README.md  client_testing.py  docker-compose.yml  pyproject.toml
docker/: Dockerfile.app  Dockerfile.worker
src/: config.py  connections.py  main.py
src/database/: billing.py  orm.py
src/file_storages/: s3.py
src/models/: enhancer.py
src/workers/: enhance.py  models_info.py
tests/: test_api_scenarios.py  test_audio_enhancment.py
